[releng] Cleaned up test POMs.
Also, limited Jacoco setup to test plugins only,
thereby slightly improving build time.

Change-Id: Iec14ac1234172e968fc54be579203ad203ad3714