@@ -1,34 +1,58 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.eclipse.recommenders.tests</groupId>
 		<artifactId>org.eclipse.recommenders.tests.parent</artifactId>
-        <version>1.0.3-SNAPSHOT</version>
+		<version>1.0.3-SNAPSHOT</version>
 	</parent>
-	<modelVersion>4.0.0</modelVersion>
 	<artifactId>org.eclipse.recommenders.tests.completion.rcp</artifactId>
 	<packaging>eclipse-test-plugin</packaging>
-   <build>
-        <plugins>
-            <plugin>
-                <groupId>org.eclipse.tycho</groupId>
-                <artifactId>tycho-surefire-plugin</artifactId>
-                <configuration>
-                    <useUIHarness>true</useUIHarness>
-                    <useUIThread>true</useUIThread>
-                    <argLine>-Xmx1G -XX:MaxPermSize=256m ${tycho-test-jvmArgs}</argLine>
-                    <dependencies combine.children="append">
-                        <dependency>
-                            <artifactId>org.eclipse.jdt.launching</artifactId>
-                            <type>eclipse-plugin</type>
-                        </dependency>
-                        <dependency>
-                            <artifactId>org.eclipse.jdt.core</artifactId>
-                            <type>eclipse-plugin</type>
-                        </dependency>
-                    </dependencies>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-surefire-plugin</artifactId>
+				<configuration>
+					<useUIHarness>true</useUIHarness>
+					<dependencies>
+						<dependency>
+							<artifactId>org.eclipse.jdt.core</artifactId>
+							<type>eclipse-plugin</type>
+						</dependency>
+						<dependency>
+							<artifactId>org.eclipse.jdt.launching</artifactId>
+							<type>eclipse-plugin</type>
+						</dependency>
+					</dependencies>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+	<profiles>
+		<profile>
+			<id>mac</id>
+			<activation>
+				<os>
+					<family>mac</family>
+				</os>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.eclipse.tycho</groupId>
+						<artifactId>tycho-surefire-plugin</artifactId>
+						<configuration>
+							<dependencies combine.children="append">
+								<dependency>
+									<artifactId>org.eclipse.jdt.launching.macosx</artifactId>
+									<type>eclipse-plugin</type>
+								</dependency>
+							</dependencies>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
